rework a bunch of routes and implement pagination
